--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/musicFragment"
-        android:icon="@drawable/icon_achivements"
+        android:icon="@drawable/music_note"
         android:title="@string/music" />
 
     <item
