--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -109,6 +109,23 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/spotifyNotInstalledTextView"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:text="To use this feature, you need to install Spotify and log in to your account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        android:textSize="25dp"
+        android:fontFamily="@font/poppins700"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:visibility="gone"/>
+
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="281dp"
