--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,8 @@
     <item
         android:id="@+id/musicFragment"
         android:icon="@drawable/music_note"
-        android:title="@string/music" />
+        android:title="@string/music"
+        app:itemIconTint="@color/bottom_tab_music_icon_color"/>
 
     <item
         android:id="@+id/dontKnowFragment"
