--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="light_grey">#BFC2C8</color>
     <color name="light_green">#90EE90</color>
     <color name="red">#FF0000</color>
+    <color name="trans">#00000000 </color>
+    <color name="lightblue">#4BE1F4</color>
 </resources>
