--- a/app/src/main/res/layout/event_list_view.xml
+++ b/app/src/main/res/layout/event_list_view.xml
@@ -47,11 +47,9 @@
             android:id="@+id/join_challenge_button"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:background="@drawable/round_outline"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:gravity="center"
-            android:text="Join challenge">
+            android:gravity="center">
         </TextView>
 
     </LinearLayout>
