--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -152,13 +152,14 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:layout_marginRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/emoji_run">
                 </ImageView>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -167,14 +168,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:textSize="20dp"
+                        android:textSize="16dp"
                         android:text="103,2">
                     </TextView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
+                        android:gravity="left"
                         android:text="km">
                     </TextView>
 
@@ -191,13 +192,14 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:layout_marginRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/emoji_clock">
                 </ImageView>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -206,14 +208,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:textSize="20dp"
+                        android:textSize="16dp"
                         android:text="16,9">
                     </TextView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
+                        android:gravity="left"
                         android:text="hr">
                     </TextView>
 
@@ -229,13 +231,14 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:layout_marginRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/emoji_fire">
                 </ImageView>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -244,14 +247,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:text="1,5k">
+                        android:textSize="16dp"
+                        android:text="1,5">
                     </TextView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
+                        android:gravity="left"
                         android:text="kcal">
                     </TextView>
 
