--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red">#FF0000</color>
     <color name="trans">#00000000 </color>
     <color name="lightblue">#4BE1F4</color>
+    <color name="light_red">#FFE5E5</color>
 </resources>
